# clinical-assistant-tools

./: .gitignore  README.md  pyproject.toml  rag_eval_gpt-4o-mini_gpt-4o-mini.csv  rag_eval_gpt-4o_gpt-4o-mini.csv  requirements.txt
ai_tools/: guidelines_parsing_tool.py  idsr_check_tool.py  patient_sql_tool.py  patient_summary_tool.py  patient_tool_helpers.py  prep_case.py  prep_triage_case.py  schemas.py
ai_tools/case_studies/: case_five_typhoid.json  case_four_cervical_cancer.json  case_two_stomach_cancer.json
case_studies/: case_one_cholera.json  case_three_malaria.json
evals/: ragas_eval.py
notebooks/: create_site_db.ipynb
tools/: guidelines_parsing_tool.py
