[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-assistant-tools"
version = "0.1.0"
description = "Standalone tools for the clinician assistant project"
authors = [
  { name="Jonathan Friedman", email="Jonathan.Friedman@thepalladiumgroup.com" }
]
dependencies = [
    "numpy",
    "pandas",
    "langchain_openai",
    "llama-index"
]
