[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical_assistant_tools"  # use underscore to avoid confusion
version = "0.1.0"
description = "Standalone tools for the clinician assistant project"
packages = ["ai_tools"]
authors = [
    { name = "Jonathan Friedman", email = "Jonathan.Friedman@thepalladiumgroup.com" }
]
dependencies = [
    "numpy",
    "pandas",
    "langchain_openai",
    "llama-index"
]
