[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical_assistant_tools"
version = "0.1.0"
description = "Standalone tools for the clinician assistant project"
authors = [
    { name = "Jonathan Friedman", email = "Jonathan.Friedman@thepalladiumgroup.com" }
]
dependencies = [
    "numpy",
    "pandas",
    "langchain_openai",
    "llama-index"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_tools*"]
